--- a/style.css
+++ b/style.css
@@ -381,6 +381,123 @@ body
 	filter: grayscale(0%);
 }
 
+.event-slider{
+    background-color:#fff;
+    padding: 0 20px;
+    box-sizing: border-box;
+}
+a{
+    text-decoration: none;
+}
+.slider-heading{
+    font-family: 'Arial Black';
+    color:#c82b00;
+    text-transform: uppercase;
+    display: flex;
+    flex-wrap: wrap;
+    width: 90%;
+    margin: 0px auto;
+    padding: 0 20px;
+}
+
+.slider-heading h3{
+	position:relative;
+    font-family: 'Arial Black';
+	right:-400px;
+	font-size: 50px;
+	margin: 20px;
+	padding: 20px 20px;
+	text-shadow: 0px 0px 5px #c82b00;
+    
+}
+.event-class{
+    display: flex;
+    flex-direction: column;
+    width: 400px;
+    text-decoration: none;
+    background-color: #fff;
+    border-radius: 20px;
+    margin: 20px;
+    padding: 25px;
+    box-sizing: border-box;
+    box-shadow: 2px 2px 8px rgba(0,0,0,0.03);
+    border: 1px solid rgba(0,0,0,0.08);
+    overflow: hidden;
+    transition: all ease 0.3s;
+}
+.event-class:hover{
+    box-shadow: 2px 3px 8px rgba(0,0,0,0.10);
+    transform:scale(1.004);
+    transition: all ease 0.3s;
+}
+.event-class strong{
+    color: #ed5858;
+    font-size: 1.75rem;
+    font-family: 'Arial Black';
+    font-weight: 600;
+    margin-top: 24px;
+}
+
+.event-class img{
+    width:210px;
+    height: 250px;
+    display: flex;
+    padding: 20px 0;
+    object-fit: contain;
+    object-position:center;
+    margin: 20px auto;
+}
+
+.event-class p{
+    letter-spacing:1.7px;
+}
+
+.event-class .register-btn{
+    color: #fff;
+    background-color: #c82b00;
+    text-decoration: none;
+    width: 300px;
+    height: 60px;
+    padding: 0px;
+    margin: 0px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border-radius: 20px;
+    font-family:'Arial Black';
+}
+
+.lSPager{
+    display: none;
+}
+.lSAction > a{
+    background-color: #c82b00;
+    width: 50px;
+    height: 50px;
+    border-radius: 50%;
+    background-image: none;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.lSAction > a::after{
+    position: absolute;
+    content: '';
+    margin: auto;
+    border: solid #fff;
+    border-width: 0px 4px 4px 0px;
+    display: inline-block;
+    padding: 5px;
+}
+
+.lSAction > .lSPrev::after{
+    transform: rotate(135deg);
+    -webkit-transform: rotate(135deg);
+}
+.lSAction > .lSNext::after{
+    transform: rotate(-45deg);
+    -webkit-transform: rotate(-45deg);
+}
 
 /*----------media query-----------*/
 
